@@ -1,0 +1,3 @@
+# MemoryFunctionsFullRead
+## Description:
+This AddOn will attempt to test ALL read/get functions contained in the `IC_MemoryFunctions_Class`. This only works for functions that have 0-1 parameters and if there is 1 parameter, 1 must be a valid value.
